# wombat

./: .eslintignore  .eslintrc.cjs  .gitignore  .gitmodules  .prettierignore  .prettierrc  .release-please-manifest.json  CHANGELOG.md  LICENSE  NOTICE  README.md  build-aws-sdk-ec2.sh  bump-version.js  bun.lockb  components.json  default.nix  eslint.config.js  eslint.config.mjs  flake.nix  index.html  package-lock.json  package.json  pnpm-lock.yaml  read-version.js  release-please-config.json  rename-sidecar.js  shell.nix  svelte.config.js  tailwind.config.cjs  tailwind.config.ts  version  vite.config.ts
.cargo/: config.toml
.github/actions/inject-configs/: action.yml
.github/actions/prepare-build-env/: action.yml
.github/workflows/: build.yml  claude-code-review.yml  create-release.yml  nix-pr-check.yml  pr_check.yml  publish-release-artifacts.yml  release-please.yml  release.yml  trigger-release.yml  update-dependencies.yml
arh/: README.md  go.mod  go.sum
arh/cmd/grpc-server/: main.go
arh/internal/grpc/: server.go
arh/proto/: arh.pb.go  arh.proto  arh_grpc.pb.go
chrome-extension/: allow.js  aws-step-1.js  aws-step-2.js  background.js  github.js  index.html  manifest.json  snowflake.js  umami.js  update-ui.js  verify.js
dev-tools-mock/: codeartifact-login
docs/: development.md
release-server/: package-lock.json  package.json  release-server.js
release-server/static/: latest.json
src/: App.svelte  App.tsx  app.html  styles.css
src-tauri/: .gitignore  CHANGELOG.md  Cargo.toml  build.rs  default.env  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/resources/: params.json
src-tauri/src/: aws.rs  cache_db.rs  cluster_resolver.rs  constants.rs  db.rs  dependency_check.rs  ecs_resolver.rs  global_db.rs  jepsen_authenticator.rs  main.rs  proxy.rs  proxy_authenticators.rs  rds_resolver.rs  requirements.rs  rest_api.rs  shared.rs  user.rs  wombat_api.rs
src-tauri/src/aws/: arh_client.rs  aws_resolver.rs  mod.rs  profile_resolver.rs  sdk_client.rs  sdk_functions.rs  types.rs
src/lib/: Clusters.svelte  Menu.svelte  Services.svelte  analytics.svelte  cluster-store.ts  db-proxy-start-btn.svelte  db-proxy-stop-btn.svelte  db-secret-btn.svelte  discover-store.ts  env-store.ts  error-box.svelte  error-store.ts  home-store.ts  service-details-store.ts  service-proxy-start-btn.svelte  service-proxy-stop-btn.svelte  star-icon.svelte  store.ts  task-store.ts  types.ts  user-store.ts  utils.ts
src/lib/components/: app-card.svelte  app-env-card.svelte  codeartifact-login-btn.svelte  cookie-session-proxy-btn.svelte  db-proxy-start-btn.svelte  db-proxy-stop-btn.svelte  db-secret-btn.svelte  db-self-service-chip.svelte  db-task-status.svelte  deploy-service-btn.svelte  error-box.svelte  feature-btn.svelte  json-view.svelte  lambda-app-card.svelte  lambda-app-proxy-btn.svelte  log-filter-form.svelte  multi-select.svelte  proxy-auth-config-form.svelte  remove-non-platform-task-definitions-btn.svelte  restart-service-btn.svelte  service-cell.svelte  service-multiselect.svelte  service-proxy-start-btn.svelte  service-task-status.svelte  star-icon.svelte
src/lib/componets/: app-card-hr.svelte  app-card.svelte  app-env-card.svelte  browser-extension-dot.svelte  codeartifact-login-btn.svelte  custom-header-form.svelte  database-cell.svelte  db-proxy-start-btn.svelte  db-proxy-stop-btn.svelte  db-secret-btn.svelte  db-self-service-chip.svelte  db-task-status.svelte  dbeaver-btn.svelte  deploy-or-restart-service-btn.svelte  deploy-service-btn.svelte  deployment-status.svelte  env-card.svelte  error-box.svelte  feature-btn.svelte  json-view.svelte  lambda-app-card.svelte  lambda-app-proxy-btn.svelte  lambda-task-status.svelte  remove-non-platform-task-definitions-btn.svelte  restart-service-btn.svelte  service-cell.svelte  service-multiselect.svelte  service-proxy-start-btn.svelte  service-proxy-stop-btn.svelte  service-task-status.svelte  star-icon.svelte  task-manager.svelte  timerange-select.svelte  update-btn.svelte  user-session-proxy-btn.svelte
src/lib/stores/: available-accounts-store.ts  available-profiles-store.ts  browser-extension-status.ts  cluster-store.ts  cookie-jar-status.ts  db-store.ts  deployment-store.ts  env-store.ts  error-store.ts  feature-store.ts  log-filters-store.ts  log-store.ts  proxy-auth-configs-store.ts  reasons.ts  service-details-store.ts  service-store.ts  task-store.ts  user-store.ts
src/old_lib/componets/: analytics.svelte  app-card-hr.svelte  database-cell.svelte  db-proxy-start-btn.svelte  service-multiselect.svelte  service-proxy-start-btn.svelte
src/old_lib/stores/: cluster-store.ts  db-store.ts  service-details-store.ts  service-store.ts  user-store.ts
src/routes/: +layout.svelte  +page.svelte  Header.svelte  env-store.ts  store.ts  styles.css  types.ts  user-store.ts
src/routes/logged/: +layout.svelte
src/routes/logged/apps/: +page.svelte  app-card.svelte  database-cell.svelte  service-cell.svelte
src/routes/logged/apps/[app]/: +page.svelte  +page.ts
src/routes/logged/apps/[app]/[env]/: +page.svelte  +page.ts
src/routes/logged/config/: +page.svelte
src/routes/logged/ecs/: +page.svelte
src/routes/logged/home/: +page.svelte  database-cell.svelte  service-cell.svelte
src/routes/logged/lambda-apps/: +page.svelte
src/routes/logged/log-filters/: +page.svelte
src/routes/logged/logs/: +page.svelte
src/routes/logged/profile/: +page.svelte
src/routes/logged/proxy-auths/: +page.svelte
src/routes/logged/rds/: +page.svelte
src/routes/logged/tasks/: +page.svelte
src/routes/matched-entries/: +page.svelte
src/routes/teams/[team]/: +layout.svelte  +page.svelte  +page.ts
src/routes/window/log/: +page.svelte
test-cloudformation/: cdk.context.json  cdk.json  package.json  pnpm-lock.yaml
test-cloudformation/test/: test-stack.test.ts
update-server/: README.md  package.json  pnpm-lock.yaml  server.js
