[package]
name = "wombat"
version = "4.10.0"
description = "Wombat - in combat"
authors = ["dwilkolek@protonmail.com"]
license = ""
repository = "https://github.com/dwilkolek/wombat"
edition = "2021"
rust-version = "1.85.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
log = "^0.4"
regex = "1"
rand = "0.9.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.6.2", features = [] }
tauri-plugin = "2.3.0"
tauri-plugin-dialog = "2.3.0"
tauri-plugin-shell = "2.3.0"
tauri-plugin-process = "2.3.0"
tauri-plugin-clipboard-manager = "2.3.0"
tauri-plugin-updater = "2.9.0"
aws-runtime = "1.5.8"
aws-config = "1.8.1"
aws-sdk-ecs = "1.86.0"
aws-sdk-rds = "1.96.0"
aws-sdk-ec2 = "1.145.0"
aws-sdk-ssm = "1.83.0"
aws-sdk-sts = "1.76.0"
aws-sdk-cloudwatchlogs = "1.91.0"
aws-sdk-secretsmanager = "1.78.0"
tokio = { version = "1.46.1", features = ["full"] }
home = "0.5.11"
warp-reverse-proxy = "1.0.0"
warp = "0.3.7"
urlencoding = "2.1.3"
chrono = { version = "0.4.41", features = ["serde"] }
shared_child = "1.1.1"
wait-timeout = "0.2.1"
filepath = "0.2.0"
libsql = "0.9.14"
url = "2.5.4"
dotenvy = "0.15.7"
tracing-unwrap = "1.0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2.3"
reqwest = { version = "0.12.22", features = ["native-tls-vendored", "json"] }
futures = "0.3.31"
async-trait = "0.1.88"
headers = "0.4.1"
aws-types = "1.3.7"
tempfile = "3.20.0"
digest = "0.10.7"
sha2 = "0.10.9"
range-overlap = "0.0.1"
base64 = "0.22.1"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }

[dependencies.uuid]
version = "1.17.0"
features = [
    "v4",       # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
    "serde",
]

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
