cargo-features = ["profile-rustflags"]

[package]
name = "wombat"
version = "5.0.0"
description = "Wombat - in combat"
authors = ["dwilkolek@protonmail.com"]
license = ""
repository = "https://github.com/dwilkolek/wombat"
edition = "2021"
rust-version = "1.91.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
log = "^0.4"
regex = "1"
rand = "0.9.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.9.2", features = [] }
tauri-plugin = "2.5.1"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-shell = "2.3.3"
tauri-plugin-process = "2.3.1"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-updater = "2.9.0"
aws-runtime = "1.5.14"
aws-config = "1.8.10"
aws-sdk-ecs = "1.104.0"
aws-sdk-rds = "1.114.0"
aws-sdk-ec2 = "1.183.0"
aws-sdk-ssm = "1.99.0"
aws-sdk-sts = "1.92.0"
aws-sdk-cloudwatchlogs = "1.107.0"
aws-sdk-secretsmanager = "1.93.0"
aws-sdk-cloudformation = "1.101.0"
tokio = { version = "1.48.0", features = ["full"] }
home = "0.5.12"
warp-reverse-proxy = { git = "https://github.com/dwilkolek/warp-reverse-proxy.git", rev = "0c4e141" }
warp = "0.4.2"
urlencoding = "2.1.3"
chrono = { version = "0.4.42", features = ["serde"] }
shared_child = "1.1.1"
wait-timeout = "0.2.1"
filepath = "0.2.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.31.0"
url = "2.5.7"
dotenvy = "0.15.7"
tracing-unwrap = "1.0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2.3"
reqwest = { version = "0.12", features = ["native-tls-vendored", "json"] }
futures = "0.3.31"
async-trait = "0.1.89"
headers = "0.4.1"
aws-types = "1.3.10"
tempfile = "3.23.0"
digest = "0.10.7"
sha2 = "0.10.9"
range-overlap = "0.0.1"
base64 = "0.22.1"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }

[dependencies.uuid]
version = "1.18.1"
features = [
    "v4",       # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
    "serde",
]

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]


[profile.dev.package.aws-sdk-ecs]
rustflags = ["-Zhint-mostly-unused"]
[profile.dev.package.aws-sdk-rds]
rustflags = ["-Zhint-mostly-unused"]
[profile.dev.package.aws-sdk-ec2]
rustflags = ["-Zhint-mostly-unused"]
[profile.dev.package.aws-sdk-ssm]
rustflags = ["-Zhint-mostly-unused"]
[profile.dev.package.aws-sdk-sts]
rustflags = ["-Zhint-mostly-unused"]
[profile.dev.package.aws-sdk-cloudwatchlogs]
rustflags = ["-Zhint-mostly-unused"]
[profile.dev.package.aws-sdk-secretsmanager]
rustflags = ["-Zhint-mostly-unused"]

[profile.release.package.aws-sdk-ecs]
rustflags = ["-Zhint-mostly-unused"]
[profile.release.package.aws-sdk-rds]
rustflags = ["-Zhint-mostly-unused"]
[profile.release.package.aws-sdk-ec2]
rustflags = ["-Zhint-mostly-unused"]
[profile.release.package.aws-sdk-ssm]
rustflags = ["-Zhint-mostly-unused"]
[profile.release.package.aws-sdk-sts]
rustflags = ["-Zhint-mostly-unused"]
[profile.release.package.aws-sdk-cloudwatchlogs]
rustflags = ["-Zhint-mostly-unused"]
[profile.release.package.aws-sdk-secretsmanager]
rustflags = ["-Zhint-mostly-unused"]
