cargo-features = ["profile-rustflags"]

[package]
name = "wombat"
version = "5.0.5"
description = "Wombat - in combat"
authors = ["Damian Wilkołek <dwilkolek@protonmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/dwilkolek/wombat"
edition = "2021"
rust-version = "1.91.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
log = "^0.4"
regex = "1"
rand = "0.10.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.10.3", features = [] }
tauri-plugin = "2.5.4"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-shell = "2.3.5"
tauri-plugin-process = "2.3.1"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-updater = "2.10.1"
aws-runtime = "1.7.1"
aws-config = "1.8.14"
aws-sdk-ecs = "1.115.0"
aws-sdk-rds = "1.127.0"
aws-sdk-ec2 = "1.215.0"
aws-sdk-ssm = "1.106.0"
aws-sdk-sts = "1.99.0"
aws-sdk-cloudwatchlogs = "1.119.0"
aws-sdk-secretsmanager = "1.101.0"
aws-sdk-cloudformation = "1.108.0"
tokio = { version = "1.52.1", features = ["full"] }
home = "0.5.12"
warp-reverse-proxy = { git = "https://github.com/dwilkolek/warp-reverse-proxy.git", rev = "d0e58cc" }
warp = "0.4.2"
urlencoding = "2.1.3"
chrono = { version = "0.4.44", features = ["serde"] }
shared_child = "1.1.1"
wait-timeout = "0.2.1"
filepath = "0.2.0"
rusqlite = { version = "0.39.0", features = ["bundled"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.33.0"
url = "2.5.8"
dotenvy = "0.15.7"
tracing-unwrap = "1.0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2.5"
reqwest = { version = "0.13", features = ["native-tls-vendored", "json"] }
futures = "0.3.32"
async-trait = "0.1.89"
headers = "0.4.1"
aws-types = "1.3.13"
tempfile = "3.27.0"
digest = "0.11.2"
sha2 = "0.10.9"
range-overlap = "0.0.1"
base64 = "0.22.1"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }

[dependencies.uuid]
version = "1.23.1"
features = [
    "v4",       # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
    "serde",
]

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]


[profile.dev.package.aws-sdk-ecs]
rustflags = ["-Zhint-mostly-unused"]
[profile.dev.package.aws-sdk-rds]
rustflags = ["-Zhint-mostly-unused"]
[profile.dev.package.aws-sdk-ec2]
rustflags = ["-Zhint-mostly-unused"]
[profile.dev.package.aws-sdk-ssm]
rustflags = ["-Zhint-mostly-unused"]
[profile.dev.package.aws-sdk-sts]
rustflags = ["-Zhint-mostly-unused"]
[profile.dev.package.aws-sdk-cloudwatchlogs]
rustflags = ["-Zhint-mostly-unused"]
[profile.dev.package.aws-sdk-secretsmanager]
rustflags = ["-Zhint-mostly-unused"]

[profile.release.package.aws-sdk-ecs]
rustflags = ["-Zhint-mostly-unused"]
[profile.release.package.aws-sdk-rds]
rustflags = ["-Zhint-mostly-unused"]
[profile.release.package.aws-sdk-ec2]
rustflags = ["-Zhint-mostly-unused"]
[profile.release.package.aws-sdk-ssm]
rustflags = ["-Zhint-mostly-unused"]
[profile.release.package.aws-sdk-sts]
rustflags = ["-Zhint-mostly-unused"]
[profile.release.package.aws-sdk-cloudwatchlogs]
rustflags = ["-Zhint-mostly-unused"]
[profile.release.package.aws-sdk-secretsmanager]
rustflags = ["-Zhint-mostly-unused"]
